# judex-mini

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  RE_total.csv  TODO.md  analyse.ipynb  andamentos.ipynb  compare_content.py  compare_json.py  compare_results.py  main.py  pyproject.toml  simple_mask_example.py  test_string_masks.py  transform_andamentos.ipynb  watchlist.txt
.github/workflows/: daily-report.yml
deprecated/: README.md  scraper.py
deprecated/extraction/: extract_andamentos.py  extract_assuntos.py  extract_badges.py  extract_data_protocolo.py  extract_deslocamentos.py  extract_incidente.py  extract_liminar.py  extract_numero_origem.py  extract_orgao_origem.py  extract_origem.py  extract_partes.py  extract_peticoes.py  extract_primeiro_autor.py  extract_recursos.py  extract_sessao_virtual.py  extract_volumes_folhas_apensos.py
deprecated/utils/: driver.py
docs/: agent-sweeps.md  andamentos-classifier-gaps.md  completion-tracker.md  cost-estimates.md  current_progress.md  data-dictionary.md  data-layout.md  handoff.md  hc-backfill-extension-plan.md  hc-who-wins-lit-review.md  hc-who-wins-validation.md  hc-who-wins.md  pdf-sweep-conventions.md  peca-sweep-conventions.md  peca-tipo-classification.md  perf-bulk-data.md  performance.md  process-space.md  rate-limits.md  recovery-patterns.md  setup-fly.md  setup-modal.md  setup-proxies.md  setup-runpod.md  setup-wsl.md  stf-portal.md  stf-taxonomy.md  system-changes.md  top2_text_rooted_profile.md  warehouse-design.md
docs/adr/: 0001-unify-peca-fetch-under-bytes-first-model.md  0002-distinguish-unallocated-processo-id-from-scrape-failure.md  0003-surface-3-dje-capture-path.md  0004-coleta-orchestrator-with-status-aware-retry.md  0005-unified-pipeline.md  0006-pipeline-state-journal.md
docs/agents/: domain.md
docs/pdf-sweeps/: README.md
docs/progress_archive/: 2026-04-18_0130_handoff-pre-consolidation.md  2026-04-19_0500_schema-v4-v5-v6-and-mistral-default.md  2026-04-21_0805_hc-2025-arm-a-8-shard-cliff-cascade.md  2026-04-29_2200_hc-2024-2023-backfill.md  2026-05-01_0016_ocr-bakeoff-tesseract-winner.md  2026-05-01_1750_cloud-ocr-fly-landing.md  2026-05-04_0842_hc-fillin-chain-cli-cleanup.md
docs/reference/: processar_andamentos_legacy.py
docs/reports/: 2026-04-16-A-shape-coverage.md  2026-04-17-backfill-log.md  2026-04-17-famous-lawyers-ocr.md  (+10 more)
fly/: .dockerignore  Dockerfile  README.md  fly.toml  requirements.txt  server.py
ground_truth/: RE_1234567.csv
judex/: backup.py  cli.py  config.py  ground_truth_test.py
notes/: main_legacy.py
output/: judex-mini_AI_772309-772309.json  judex-mini_RE_1-1 copy.json  judex-mini_RE_1-1.csv  judex-mini_RE_1-1.jsonl  judex-mini_RE_1-2.csv  judex-mini_RE_1-2.json  judex-mini_RE_1-3.json  judex-mini_RE_1234567-1234567.csv  judex-mini_RE_1234567-1234567.json
scripts/: _diff.py  _filters.py  _pdf_cli.py  aggregate_dead_ids.py  aggregate_unallocated_pids.py  analyze_regimes.py  audit_peca_cache.py  backfill_n_pecas.py  backup_to_b2.sh  baixar_pdfs.py  baixar_pecas.py  bench_http_vs_selenium.py  build_warehouse.py  class_density_probe.py  clean_pdf_text.py  daily_report.py  export_blog_post.py  export_notebooks_html.sh  extrair_pdfs.py  extrair_pecas.py  fetch_famous_lawyer_pdfs.py  fetch_pdfs.py  follow_run.py  generate_hc_year_gap_csv.py  launch_hc_backfill.sh  launch_hc_backfill_sharded.sh  launch_hc_year_sharded.sh  migrate_html_cache_to_tar.py  migrate_unallocated_status.py  monitor_overnight.sh  ocr_bakeoff.py  ocr_bakeoff_gold_init.py  ocr_bakeoff_run.py  ocr_bakeoff_sample.py  ocr_bakeoff_score.py  ocr_tesseract_sweep.py  overnight_t0123.sh  pipeline_prototype.py  probe_sharded.py  purge_empty_pdf_cache.py  (+10 more)
src/: _shared.py  cli.py  config.py  driver.py  dsl.py  export.py  extraction_http.py  extraction_http_sessao.py  http_session.py  output_config.py  pdf_driver.py  pdf_store.py  pdf_targets.py  process_store.py  scraper.py  scraper_http.py  timing.py  types.py
state/: daily_report.json
tests/: conftest.py
utils/: .gitignore  documents.py  driver.py  dsl.py  export.py  get_element.py  validation.py
(+571 files in other folders)
