[project]
name = "judex-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "requests>=2.32.5",
    "selenium>=4.37.0",
    "striprtf>=0.0.29",
    "tenacity>=9.1.2",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
]
