[project]
name = "judex-mini"
version = "0.1.0"
description = "Extração automatizada de dados de processos do STF."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair[all]>=5.5.0",
    "beautifulsoup4>=4.14.2",
    "hdbscan>=0.8.40",
    "lxml>=6.0.2",
    "marimo>=0.23.1",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pypdf>=6.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.37.0",
    "striprtf>=0.0.29",
    "tenacity>=9.1.2",
    "typer>=0.19.2",
    "umap-learn>=0.5.9.post2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.marimo.runtime]
# Run all cells automatically when the notebook opens. Without this,
# marimo opens cells in a "stale" state until the user hits "Run all".
auto_instantiate = true
on_cell_change = "autorun"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=21.0.0",
    "pytest>=9.0.3",
    "ruff>=0.14.1",
    "seaborn>=0.13.2",
    "types-requests>=2.32.4.20250913",
]
