[project]
name = "judex-mini"
description = "Extração automatizada de dados de processos do STF."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Gustavo Araujo Costa", email = "gustavo@arcos.org.br"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Sociology",
]
dynamic = ["version"]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.5.2",
    "great-tables>=0.21.0",
    "kaleido>=1.2.0",
    "lxml>=6.0.2",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyjwt>=2.12.1",
    "pypdf>=6.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "striprtf>=0.0.29",
    "tenacity>=9.1.2",
    "typer>=0.19.2",
]

[project.optional-dependencies]
analysis = [
    "altair[all]>=5.5.0",
    "hdbscan>=0.8.40",
    "marimo>=0.23.1",
    "matplotlib>=3.10.7",
    "plotly>=6.7.0",
    "pyvis>=0.3.2",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]
selenium-legacy = ["selenium>=4.37.0"]

[project.scripts]
judex = "judex.cli:app"

[project.urls]
Repository = "https://github.com/noah-art3mis/judex-mini"
Issues = "https://github.com/noah-art3mis/judex-mini/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "judex/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["judex"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.marimo.runtime]
# Run all cells automatically when the notebook opens. Without this,
# marimo opens cells in a "stale" state until the user hits "Run all".
auto_instantiate = true
on_cell_change = "autorun"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=9.0.3",
    "ruff>=0.14.1",
    "types-requests>=2.32.4.20250913",
]
